<resources>
    <string name="app_name">加密算法检测验证工具</string>
    <string name="classic_algorithm">经典加密算法</string>
    <string name="guomi_algorithm">国密算法与编码</string>
    <string name="des">DES加解密</string>
    <string name="_3des">3DES加解密</string>
    <string name="rc4">RC4加解密</string>
    <string name="aes">AES加解密</string>
    <string name="rsa">RSA加解密</string>
    <string name="sm2">SM2加密签名</string>
    <string name="sm2_change">SM2密钥交换</string>
    <string name="sm3">SM3摘要</string>
    <string name="sm4">SM4加解密</string>
    <string name="base64">base64编码</string>
    <string name="system_code_change">进制与编码转换</string>
    <string name="code_style">编码方式：</string>
    <string name="utf_8">utf_8</string>
    <string name="gbk">gbk</string>
    <string name="unicode">unicode</string>
    <string name="input_format">输入格式：</string>
    <string name="bin">bin</string>
    <string name="hex">hex</string>
    <string name="_byte">byte</string>
    <string name="input_content">输入内容：</string>
    <string name="key_format">密钥格式：</string>
    <string name="key_content">密钥内容：</string>
    <string name="encryption">加密</string>
    <string name="decrypt">解密</string>
    <string name="vector_format">向量格式：</string>
    <string name="operate_mode">操作模式：</string>
    <string name="handler">进行处理</string>
    <string name="des_algorithm_tool">DES加密算法处理工具</string>
    <string name="_3des_algorithm_tool">3DES加密算法处理工具</string>
    <string name="rc4_algorithm_tool">RC4加密算法处理工具</string>
    <string name="aes_algorithm_tool">AES加密算法处理工具</string>
    <string name="work_mode">工作模式：</string>
    <string name="ecb">ECB</string>
    <string name="cbc">CBC</string>
    <string name="cfb">CFB</string>
    <string name="ofb">OFB</string>
    <string name="ctr">CTR</string>
    <string name="handler_result">处理结果：</string>
    <string name="key_length">密钥长度</string>
    <string name="_128">128位</string>
    <string name="_192">192位</string>
    <string name="_256">256位</string>
    <string name="init_vector">初始向量：</string>
    <string name="rsa_algorithm_tool">RSA加密算法处理工具</string>
    <string name="generate_key_length">生成密钥-密钥长度</string>
    <string name="_512">512</string>
    <string name="_768">768</string>
    <string name="_1024">1024</string>
    <string name="_1152">1152</string>
    <string name="_1280">1280</string>
    <string name="_1976">1976</string>
    <string name="_2048">2048</string>
    <string name="choose_file">选择文件</string>
    <string name="input_show">输入显示</string>
    <string name="save_result">保存结果</string>
    <string name="output_show">输出显示</string>
    <string name="generate_key_file">生成密钥文件</string>
    <string name="signature_content">签名内容：</string>
    <string name="signature">签名</string>
    <string name="verify">验证</string>
    <string name="sm2_algorithm_tool">SM2加密算法处理工具</string>
    <string name="sm2_key_change">SM2密钥交换协议</string>
    <string name="id_input_format">ID输入格式：</string>
    <string name="a_id">用户A的ID：</string>
    <string name="b_id">用户B的ID：</string>
    <string name="key_input_format">私钥输入格式:</string>
    <string name="a_key">用户A的私钥：</string>
    <string name="b_key">用户B的私钥：</string>
    <string name="sm3_algorithm_tool">SM3摘要算法处理工具</string>
    <string name="sm4_algorithm_tool">SM4加密算法处理工具</string>
    <string name="base64_algorithm_tool">Base64编解码处理工具</string>
    <string name="handler_mode">处理模式：</string>
    <string name="_default">DEFAULT</string>
    <string name="no_padding">NO_PADDING</string>
    <string name="no_wrap">NO_WRAP</string>
    <string name="url_safe">URL_SAFE</string>
    <string name="crlf">CRLF</string>
    <string name="file_code">文件编码：</string>
    <string name="unicode_bin">unicode-bin</string>
    <string name="utf8_bin">utf8-bin</string>
    <string name="gbk_bin">gbk-bin</string>
    <string name="encoding_binary_conversion">编码进制转换工具</string>
    <string name="unicode_hex">unicode-hex</string>
    <string name="utf8_hex">utf8-hex</string>
    <string name="gbk_hex">gbk-hex</string>
    <string name="str">str</string>
    <string name="unicode_byte">unicode-byte</string>
    <string name="utf8_byte">utf8-byte</string>
    <string name="gbk_byte">gbk-byte</string>
    <string name="unicode_base64">unicode-base64</string>
    <string name="uft8_base64">uft8-base64</string>
    <string name="gbk_base64">gbk-base64</string>
    <string name="target_format">目标格式：</string>
    <string name="change">进行转换</string>
</resources>
