<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Base64Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_file_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code_style"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/rg_file_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_utf8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/utf_8" />

                <RadioButton
                    android:id="@+id/rb_gbk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/gbk" />

                <RadioButton
                    android:id="@+id/rb_unicode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/unicode" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_input_format"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_format"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/rg_input_format"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_bin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bin" />

                <RadioButton
                    android:id="@+id/rb_hex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/hex" />

                <RadioButton
                    android:id="@+id/rb_str"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/str" />

                <RadioButton
                    android:id="@+id/rb_byte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/_byte" />

            </RadioGroup>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_id_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_content"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bt_choose_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_id_a"
                android:layout_marginTop="10dp"
                android:text="@string/choose_file" />

            <CheckBox
                android:id="@+id/cb_input_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bt_choose_file"
                android:layout_marginTop="10dp"
                android:text="@string/input_show" />

            <EditText
                android:id="@+id/et_id_a"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@id/tv_id_a"
                android:background="@drawable/et_background"
                tools:ignore="Autofill,LabelFor,TextFields" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_operate_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operate_mode"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/rg_operate_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_encryption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/encryption" />

                <RadioButton
                    android:id="@+id/rb_decrypt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/decrypt" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_handler_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/handler_mode"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/rg_handler_mode_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_default"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_default" />

                <RadioButton
                    android:id="@+id/rb_no_padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/no_padding" />

            </RadioGroup>

        </LinearLayout>

        <RadioGroup
            android:id="@+id/rg_handler_mode_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_no_wrap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/no_wrap" />

            <RadioButton
                android:id="@+id/rb_url_safe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/url_safe" />

            <RadioButton
                android:id="@+id/rb_crlf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/crlf" />

        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_handler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/handler"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/bt_change_system_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="50dp"
                android:text="@string/system_code_change"
                tools:ignore="ButtonStyle,RelativeOverlap" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/handler_result"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bt_save_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_result"
                android:layout_marginTop="10dp"
                android:text="@string/save_result" />

            <CheckBox
                android:id="@+id/cb_output_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bt_save_result"
                android:layout_marginTop="10dp"
                android:text="@string/output_show" />

            <EditText
                android:id="@+id/et_result"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:layout_toEndOf="@id/tv_result"
                android:background="@drawable/et_background"
                tools:ignore="Autofill,LabelFor,TextFields" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>